--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section>
+    <section id="landing">
       <nav>
         <div class="nav_container">
           <img class="logo" src="assets/Library.svg" alt="" />
@@ -19,6 +19,23 @@
           </ul>
         </div>
       </nav>
+
+      <header>
+        <div class="header_container">
+          <div class="header_description">
+            <h1>America's most awarded online library platform</h1>
+            <h2>
+              Find your dream book with <span class="purple">Library</span>
+            </h2>
+            <a href="#features">
+              <button class="btn">Browse books</button>
+            </a>
+          </div>
+          <figure class="header_img--wrapper">
+            <img src="./assets/Undraw_Books.svg" alt="" />
+          </figure>
+        </div>
+      </header>
     </section>
   </body>
 </html>
